# Messenger

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.py
api_keys/: api_gpt.py  simplechat-39233-firebase-adminsdk-1e0ku-2bcaa707e7.json
data/: AI.py  firebase_admin.py  local_url.py  messages.py  random_ava.py  users.py
db/: blogs.db  users.db
fonts/: fira.eot
forms/: add_friends.py  change_email_form.py  change_name_form.py  chat.py  reg_form.py
templates/: base.html  change-email.html  change-name.html  chat.html  chatgpt.html  error.html  friends.html  index.html  login.html  notifications.html  profile.html  reg.html  register.html
